@@ -1,48 +1,48 @@
 \begin{camlexample}{verbatim}
 \begin{caml}
 \begin{camlinput}
-$\?$let start = 0
-$\?$$\ldots$
-$\?$let mid = succ hidden
-$\?$$\ldots$
+let start = 0
+$\ldots$
+let mid = succ hidden
+$\ldots$
 
-$\?$module E = struct end
-$\?$$\ldots$
+module E = struct end
+$\ldots$
 
-$\?$let expr = $\ldots$
+let expr = $\ldots$
 
-$\?$let pat = match start with
-$\?$  | $\ldots$ | 1 -> succ expr
-$\?$  | _ -> succ expr
+let pat = match start with
+  | $\ldots$ | 1 -> succ expr
+  | _ -> succ expr
 
-$\?$let case = match start with
-$\?$  | 0 -> succ pat
-$\?$  | $\ldots$
+let case = match start with
+  | 0 -> succ pat
+  | $\ldots$
 
 
-$\?$let annot: $\ldots$ = succ case
+let annot: $\ldots$ = succ case
 
-$\?$let subexpr = succ annot + ($\ldots$ * 2) - 2
+let subexpr = succ annot + ($\ldots$ * 2) - 2
 
-$\?$$\ldots$
+$\ldots$
 
-$\?$class c2 = object
-$\?$  $\ldots$
-$\?$  val y = 1
-$\?$  $\ldots$
-$\?$  method n = 3
-$\?$  $\ldots$
-$\?$end
+class c2 = object
+  $\ldots$
+  val y = 1
+  $\ldots$
+  method n = 3
+  $\ldots$
+end
 
-$\?$type t = $\ldots$ | B $\ldots$ | F
-$\?$type arrow = int -> ($\ldots$)
-$\?$type record = { a:int; $\ldots$ c:int;
-$\?$                $\ldots$
-$\?$                g:int }
-$\?$type polyvar = [`A|$\ldots$ |`C
-$\?$               |$\ldots$
-$\?$               | `G ]
-$\?$type exn += $\ldots$ | B $\ldots$ | F
+type t = $\ldots$ | B $\ldots$ | F
+type arrow = int -> ($\ldots$)
+type record = { a:int; $\ldots$ c:int;
+                $\ldots$
+                g:int }
+type polyvar = [`A|$\ldots$ |`C
+               |$\ldots$
+               | `G ]
+type exn += $\ldots$ | B $\ldots$ | F
 \end{camlinput}
 \end{caml}
 \end{camlexample}
